# trading-copilot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  NEXT-STEP.md  README.md  ROADMAP-ENGINEERING.md  ROADMAP-TRADING.md  ROADMAP-WEBAPP.md  ROADMAP.md  TESTING_GUIDE.md  alembic.ini  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-base.txt  requirements-ml.txt  requirements.txt  run_tests.sh  run_webapp.py
alembic/: env.py
alembic/versions/: e1b5a34759a7_initial_schema.py
app/: config.py  server.py
app/api/: analysis.py  analytics_api.py  assets.py  health.py  monitor.py  portfolio.py  settings.py  trades.py  websocket.py
app/middleware/: auth.py  logging.py  rate_limit.py
app/models/: database.py  (+1 more)
docs/: Main.md  api.md  architecture.md  configuration.md  deployment.md  strategy.md
modules/: backtester.py  circuit_breaker.py  circuit_breaker_drawdown.py  economic_calendar.py  exceptions.py  groq_client.py  hallucination_guard.py  keywords.py  llm_client.py  news_fetcher.py  polymarket.py  price_data.py  report.py  retry.py  sentiment.py  strategy.py  trade_log.py  vbt_backtester.py
tests/: conftest.py  test_analytics_api.py  test_analyzer.py  test_auth.py  test_backtester.py  test_cache.py  test_circuit_breaker.py  test_drawdown_breaker.py  test_economic_calendar.py  test_exceptions.py  test_hallucination_guard.py  test_integration.py  test_monitor_budget.py  test_news_fetcher.py  test_polymarket.py  test_price_data.py  test_report.py  test_sentiment.py  test_sprint456.py  test_strategy.py
tradingview/: trading_copilot.pine
(+24 files in other folders)
